Updated blue bronna

--- a/bluebronna/index.html
+++ b/bluebronna/index.html
@@ -43,8 +43,8 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="./volunteer/index.html">Volunteer</a></li>
                         <li class="nav-item"><a class="nav-link" href="./volunteer/needs.html">Needs</a></li>
-                        <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" href="https://www.atbcares.com/donate">Donate</a></li>
-                        <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
+                        <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate</a></li>
+                        <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
                     </ul>
                 </div>
             </nav>
@@ -84,7 +84,7 @@
                                 <img class="d-block w-100" src="./static/img/3.jpg" alt="Third slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="./static/img/4.jpg" alt="Fourth slide">
+                                <img class="d-block w-100" src="./static/img/Staff%20Recruitment%20Poster.jpg" alt="Fourth slide">
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="./static/img/5.jpg" alt="Fifth slide">
@@ -154,7 +154,27 @@
                                 </div>
                                 <div id="collapse1" class="collapse" data-parent="#acc1">
                                     <div class="card-body">
-                                        Based on a five day camp.-Bible-Rain gear & gloves -Water bottle -Flashlight or headlamp-Boots with a heel -Sturdy runners or hikers-Jeans or sturdy pants (2)-Warm long-sleeved shirts (2)-T-shirts (4)-Hooded sweatshirt-Waterproof soft shell jacket-Warm hat-Swim wear-Socks (6) (wool blend)-Personal hygiene (towel, soap, etc.)-Warm sleeping bag (-10 rating at least)-Self inflating sleeping pad or thin foam-Camera What not to bring.Please do not bring things like phones, iPods, or expensive/cherished items that may be lost or broken(i.e. journals, jewelry, etc.). We would like our campers not to be worried about items being in danger of damage while at camp.
+                                        <p>Based on a five day camp.</p>
+                                        <ul>
+                                            <li>Bible</li>
+                                            <li>Rain gear & gloves</li>
+                                            <li>Water bottle</li>
+                                            <li>Flashlight or headlamp</li>
+                                            <li>Boots with a heel</li>
+                                            <li>Sturdy runners or hikers-Jeans or sturdy pants</li>
+                                            <li>2 Warm long-sleeved shirts</li>
+                                            <li>2 T-shirts</li>
+                                            <li>4 Hooded sweatshirt</li>
+                                            <li>Waterproof soft shell jacket</li>
+                                            <li>Warm hat</li>
+                                            <li>Swim wear</li>
+                                            <li>6 Socks(wool blend)</li>
+                                            <li>Personal hygiene (towel, soap, etc.)</li>
+                                            <li>Warm sleeping bag (-10 rating at least)</li>
+                                            <li>Self inflating sleeping pad or thin foam</li>
+                                            <li>Camera</li>
+                                        </ul>
+                                        <p>Please <em>do not</em> bring things like phones, iPods, or expensive/cherished items that may be lost or broken(i.e. journals, jewelry, etc.). We would like our campers not to be worried about items being in danger of damage while at camp.</p>
                                     </div>
                                 </div>
                             </div>
@@ -189,13 +209,10 @@
                                 </div>
                                 <div id="collapse3" class="collapse" data-parent="#acc3">
                                     <div class="card-body">
-                                        How much riding experience do I need to be on a pack trip?
-
-                                        At Willow Creek - no experience is needed but you will be expected to learn how to catch, brush and saddle their own horses and be comfortable riding for up to 1-2 hours. The day rides we do include going up and down steep terrain.
-
-                                        At Coat Creek - some experience is needed and you need to be prepared to ride for up to 8 hours.
-
-                                        Campers will need to be ready to live in the wilderness which includes going to the bathroom outside, helping with chores like harvesting firewood and setting up camp.
+                                        <p>How much riding experience do I need to be on a pack trip?</p>
+                                        <p>At Willow Creek - no experience is needed but you will be expected to learn how to catch, brush and saddle their own horses and be comfortable riding for up to 1-2 hours. The day rides we do include going up and down steep terrain.</p>
+                                        <p>At Coat Creek - some experience is needed and you need to be prepared to ride for up to 8 hours.</p>
+                                        <p>Campers will need to be ready to live in the wilderness which includes going to the bathroom outside, helping with chores like harvesting firewood and setting up camp.</p>
 
                                     </div>
                                 </div>
@@ -212,9 +229,9 @@
                                 </div>
                                 <div id="collapse4" class="collapse" data-parent="#acc4">
                                     <div class="card-body">
-                                        Do you provide subsidies and/or sponsorships for campers who can't afford to come?
+                                        <p>Do you provide subsidies and/or sponsorships for campers who can't afford to come?</p>
 
-                                        We do not want camp fees to keep someone from attending our camps.  We only have a certain number of sponsorships available each summer.  If you are in need of financial assistance to come to camp or send your child please email us at office@bluebronna.org
+                                        <p>We do not want camp fees to keep someone from attending our camps.  We only have a certain number of sponsorships available each summer.  If you are in need of financial assistance to come to camp or send your child please email us at office@bluebronna.org</p>
                                     </div>
                                 </div>
                             </div>
@@ -248,8 +265,8 @@
                                 </div>
                                 <div id="collapse6" class="collapse" data-parent="#acc6">
                                     <div class="card-body">
-                                        We don't attend church; will we feel out of place? Will my child feel pressured to believe in your faith?
-                                        Many of our campers do not attend church, a fact which we take into consideration when we plan our programs and camps. No camper will forced or coerced into making any decision at camp. We do our best to include each camper and strive for an inclusive, loving environment in which each person feels accepted and appreciated.
+                                        <p>We don't attend church; will we feel out of place? Will my child feel pressured to believe in your faith?</p>
+                                        <p>Many of our campers do not attend church, a fact which we take into consideration when we plan our programs and camps. No camper will forced or coerced into making any decision at camp. We do our best to include each camper and strive for an inclusive, loving environment in which each person feels accepted and appreciated.</p>
                                     </div>
                                 </div>
                             </div>
@@ -262,7 +279,7 @@
                     <div class="col-md-4 mb-2">
                         <h3 class="font-weight-bold">About Us</h3>
                         <p>At Blue Bronna Wilderness Camp, we are passionate about providing campers the opportunity to get to know God by experiencing nature through wilderness adventures in the Alberta Rockies.&nbsp;<a class="anchor-darkblue-white" href="../about/history.html" target="_blank">Learn more...</a></p>
-                        <p><a class="font-weight-bold anchor-darkblue-white" href="https://www.atbcares.com/donate">Donate Today <i class="fas fa-arrow-right"></i></a></p>
+                        <p><a class="font-weight-bold anchor-darkblue-white" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate Today <i class="fas fa-arrow-right"></i></a></p>
                         <p><img src="./static/img/member_logo.png"/></p>
                     </div>
                     <div class="col-md-4 mx-auto mb-3">
