--- a/bluebronna/volunteer/index.html
+++ b/bluebronna/volunteer/index.html
@@ -36,15 +36,15 @@
                 <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
                     <a class="dropdown-item" href="../about/history.html">History</a>
                     <a class="dropdown-item" href="../about/locations.html">Locations</a>
-                    <a class="dropdown-item" href="../about/stories.html">Stories</a>
+                    <!-- <a class="dropdown-item" href="../about/stories.html">Stories</a> -->
                     <a class="dropdown-item" href="../about/faq.html">Frequently Asked Questions</a>
                     <a class="dropdown-item" href="../about/contact-us.html">Contact Us</a>
                 </div>
             </li>
             <li class="nav-item"><a class="nav-link active" href="../volunteer/index.html">Volunteer</a></li>
             <li class="nav-item"><a class="nav-link" href="../volunteer/needs.html">Needs</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" href="https://www.atbcares.com/donate">Donate</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
+            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate</a></li>
+            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
         </ul>
     </div>
 </nav>
@@ -61,7 +61,8 @@
     <p>Applications are accepted from those 16 (Junior Staff) and older who know and love Jesus Chris as their Saviour and Lord, relate well to youth, and have a desire to be involved in a ministry to underprivileged youth. All positions except Junior Staff programs require people to be 18 years old come camp time.</p>
 
     <p class="ss"><a target="_blank" href="../static/files/2020%20BBWC%20Camp%20Staff%20Information.pdf">Download the 2020 Staff Information Package</a></p>
-    <p class="ss"><a href="#">2020 Staff Online Application Link</a></p>
+    <p class="ss"><a target="_blank" href="https://bluebronna.wufoo.com/forms/m1i1amj20v18dwj/">2020 New Staff Online Application Link</a></p>
+    <p class="ss"><a target="_blank" href="https://bluebronna.wufoo.com/forms/m1nkhi5d0qe1n80/">2020 Returning Staff Online Application Link</a></p>
     <p>For more info, email <a href="mailto:Office@BlueBronna.org">office@bluebronna.org</a></p>
 
     <div class="row">
@@ -132,7 +133,7 @@
         <div class="col-md-4 mb-2">
             <h3 class="font-weight-bold">About Us</h3>
             <p>At Blue Bronna Wilderness Camp, we are passionate about providing campers the opportunity to get to know God by experiencing nature through wilderness adventures in the Alberta Rockies.&nbsp;<a class="anchor-darkblue-white" href="../about/history.html" target="_blank">Learn more...</a></p>
-            <p><a class="font-weight-bold anchor-darkblue-white" href="https://www.atbcares.com/donate">Donate Today <i class="fas fa-arrow-right"></i></a></p>
+            <p><a class="font-weight-bold anchor-darkblue-white" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate Today <i class="fas fa-arrow-right"></i></a></p>
             <p><img src="../static/img/member_logo.png"/></p>
         </div>
         <div class="col-md-4 mx-auto mb-3">
