--- a/bluebronna/upcoming-adventures/ladies-pack-trip.html
+++ b/bluebronna/upcoming-adventures/ladies-pack-trip.html
@@ -36,15 +36,15 @@
                 <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
                     <a class="dropdown-item" href="../about/history.html">History</a>
                     <a class="dropdown-item" href="../about/locations.html">Locations</a>
-                    <a class="dropdown-item" href="../about/stories.html">Stories</a>
+                    <!-- <a class="dropdown-item" href="../about/stories.html">Stories</a> -->
                     <a class="dropdown-item" href="../about/faq.html">Frequently Asked Questions</a>
                     <a class="dropdown-item" href="../about/contact-us.html">Contact Us</a>
                 </div>
             </li>
             <li class="nav-item"><a class="nav-link" href="../volunteer/index.html">Volunteer</a></li>
             <li class="nav-item"><a class="nav-link" href="../volunteer/needs.html">Needs</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" href="https://www.atbcares.com/donate">Donate</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
+            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate</a></li>
+            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
         </ul>
     </div>
 </nav>
@@ -109,7 +109,7 @@
         <div class="col-md-4 mb-2">
             <h3 class="font-weight-bold">About Us</h3>
             <p>At Blue Bronna Wilderness Camp, we are passionate about providing campers the opportunity to get to know God by experiencing nature through wilderness adventures in the Alberta Rockies.&nbsp;<a class="anchor-darkblue-white" href="../about/history.html" target="_blank">Learn more...</a></p>
-            <p><a class="font-weight-bold anchor-darkblue-white" href="https://www.atbcares.com/donate">Donate Today <i class="fas fa-arrow-right"></i></a></p>
+            <p><a class="font-weight-bold anchor-darkblue-white" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate Today <i class="fas fa-arrow-right"></i></a></p>
             <p><img src="../static/img/member_logo.png"/></p>
         </div>
         <div class="col-md-4 mx-auto mb-3">
