--- a/bluebronna/privacy-policy/index.html
+++ b/bluebronna/privacy-policy/index.html
@@ -12,11 +12,191 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        JUMBOTRON
+<nav class="navbar fixed-top navbar-default navbar-expand-lg navbar-custom navbar-light noselect">
+    <a class="navbar-brand" href="../index.html">
+        <img src="../static/img/bbwc_logo.png" width="120" height="42" class="d-inline-block align-top" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle nav-dropdown" id="adventureDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Upcoming Adventures
+                </a>
+                <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
+                    <a class="dropdown-item" href="../upcoming-adventures/schedule.html">Schedule</a>
+                    <a class="dropdown-item" href="../upcoming-adventures/events.html">Events</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle nav-dropdown" id="aboutUsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    About Us
+                </a>
+                <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
+                    <a class="dropdown-item" href="../about/history.html">History</a>
+                    <a class="dropdown-item" href="../about/locations.html">Locations</a>
+                    <!-- <a class="dropdown-item" href="../about/stories.html">Stories</a> -->
+                    <a class="dropdown-item" href="../about/faq.html">Frequently Asked Questions</a>
+                    <a class="dropdown-item" href="../about/contact-us.html">Contact Us</a>
+                </div>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="../volunteer/index.html">Volunteer</a></li>
+            <li class="nav-item"><a class="nav-link" href="../volunteer/needs.html">Needs</a></li>
+            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate</a></li>
+            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
+        </ul>
     </div>
-    <div>Privacy TO BE ADDED</div>
+</nav>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="text-center display-5 bb-gray font-weight-bold">Privacy Policy</h1>
+    </div>
+</div>
+<div class="container">
+    <h2 class="font-weight-bold bb-gray">Privacy Policy</h2>
+    <p>Effective date: October 21, 2018</p>
+    <p>Blue Bronna Wilderness Camp ("us", "we", or "our") operates the https://www.bluebronna.org website (the "Service").</p>
+    <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy for Blue Bronna Wilderness Camp is managed through Free Privacy Policy.</p>
+    <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from https://www.bluebronna.org</p>
+
+    <h3 class="font-weight-bold bb-gray">Information Collection And Use</h3>
+    <p>We collect several different types of information for various purposes to provide and improve our Service to you.</p>
+
+    <h4 class="font-weight-bold bb-gray">Type of Data Collected</h4>
+    <h5 class="font-weight-bold bb-gray">Personal Data</h5>
+    <p>While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you ("Personal Data"). Personally identifiable information may include, but is not limited to:</p>
+    <ul class="bulletless">
+        <li><i class="fas fa-check-circle"></i> Email address</li>
+        <li><i class="fas fa-check-circle"></i> First name and Last name</li>
+        <li><i class="fas fa-check-circle"></i> Phone number</li>
+        <li><i class="fas fa-check-circle"></i> Address, State, Province, ZIP/Postal code, City</li>
+        <li><i class="fas fa-check-circle"></i> Cookies and Usage Data</li>
+    </ul>
+    <h5 class="font-weight-bold bb-gray">Usage Data</h5>
+    <p>We may also collect information how the Service is accessed and used ("Usage Data"). This Usage Data may include information such as your computer's Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that you visit, the time and date of your visit, the time spent on those pages, unique device identifiers and other diagnostic data.</p>
+    <h5 class="font-weight-bold bb-gray">Tracking & Cookies Data</h5>
+    <p>We use cookies and similar tracking technologies to track the activity on our Service and hold certain information.</p>
+    <p>Cookies are files with small amount of data which may include an anonymous unique identifier. Cookies are sent to your browser from a website and stored on your device. Tracking technologies also used are beacons, tags, and scripts to collect and track information and to improve and analyze our Service.</p>
+    <p>You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service.</p>
+    <p>Examples of Cookies we might use:</p>
+    <ul class="bulletless">
+        <li><i class="fas fa-check-circle"></i> <b>Session Cookies.</b> We use Session Cookies to operate our Service.</li>
+        <li><i class="fas fa-check-circle"></i> <b>Preference Cookies.</b> We use Preference Cookies to remember your preferences and various settings.</li>
+        <li><i class="fas fa-check-circle"></i> <b>Security Cookies.</b> We use Security Cookies for security purposes.</li>
+    </ul>
+    <h3 class="font-weight-bold bb-gray">Use of Data</h3>
+    <p>Blue Bronna Wilderness Camp uses the collected data for various purposes:</p>
+    <ul class="bulletless">
+        <li><i class="fas fa-check-circle"></i> To provide and maintain the Service</li>
+        <li><i class="fas fa-check-circle"></i> To notify you about changes to our Service</li>
+        <li><i class="fas fa-check-circle"></i> To allow you to participate in interactive features of our Service when you choose to do so</li>
+        <li><i class="fas fa-check-circle"></i> To provide customer care and support</li>
+        <li><i class="fas fa-check-circle"></i> To provide analysis or valuable information so that we can improve the Service</li>
+        <li><i class="fas fa-check-circle"></i> To monitor the usage of the Service</li>
+        <li><i class="fas fa-check-circle"></i> To detect, prevent and address technical issues</li>
+    </ul>
+    <h3 class="font-weight-bold bb-gray">Transfer of Data</h3>
+    <p>Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
+    <p>If you are located outside Canada and choose to provide information to us, please note that we transfer the data, including Personal Data, to Canada and process it there.</p>
+    <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
+    <p>Blue Bronna Wilderness Camp will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
+    <h3 class="font-weight-bold bb-gray">Disclosure of Data</h3>
+    <h4 class="font-weight-bold bb-gray">Legal Requirements</h4>
+    <ul class="bulletless">
+        <li><i class="fas fa-check-circle"></i> To comply with a legal obligation</li>
+        <li><i class="fas fa-check-circle"></i> To protect and defend the rights or property of Blue Bronna Wilderness Camp</li>
+        <li><i class="fas fa-check-circle"></i> To prevent or investigate possible wrongdoing in connection with the Service</li>
+        <li><i class="fas fa-check-circle"></i> To protect the personal safety of users of the Service or the public</li>
+        <li><i class="fas fa-check-circle"></i> To protect against legal liability</li>
+    </ul>
+    <h3 class="font-weight-bold bb-gray">Security of Data</h3>
+    <p>The security of your data is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.</p>
+    <h3 class="font-weight-bold bb-gray">Service Providers</h3>
+    <p>We may employ third party companies and individuals to facilitate our Service ("Service Providers"), to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.</p>
+    <p>These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</p>
+    <h4 class="font-weight-bold bb-gray">Analytics</h4>
+    <p>We may use third-party Service Providers to monitor and analyze the use of our Service.</p>
+    <ul class="bulletless">
+        <li><i class="fas fa-check-circle"></i>
+            <h5>Google Analytics</h5>
+            <p>Google Analytics is a web analytics service offered by Google that tracks and reports website traffic. Google uses the data collected to track and monitor the use of our Service. This data is shared with other Google services. Google may use the collected data to contextualize and personalize the ads of its own advertising network.</p>
+            <p>You can opt-out of having made your activity on the Service available to Google Analytics by installing the Google Analytics opt-out browser add-on. The add-on prevents the Google Analytics JavaScript (ga.js, analytics.js, and dc.js) from sharing information with Google Analytics about visits activity.</p>
+            <p>For more information on the privacy practices of Google, please visit the Google Privacy & Terms web page: <a href="https://policies.google.com/privacy?hl=en">Google Privacy & Terms</a></p>
+        </li>
+    </ul>
+    <h3 class="font-weight-bold bb-gray">Links To Other Sites</h3>
+    <p>Our Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site you visit.</p>
+    <p>We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</p>
+    <h3 class="font-weight-bold bb-gray">Children's Privacy</h3>
+    <p>Our Service does not address anyone under the age of 18 ("Children").</p>
+    <p>We do not knowingly collect personally identifiable information from anyone under the age of 18. If you are a parent or guardian and you are aware that your Children has provided us with Personal Data, please contact us. If we become aware that we have collected Personal Data from children without verification of parental consent, we take steps to remove that information from our servers.</p>
+    <h3 class="font-weight-bold bb-gray">Changes To This Privacy Policy</h3>
+    <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+    <p>We will let you know via email and/or a prominent notice on our Service, prior to the change becoming effective and update the "effective date" at the top of this Privacy Policy.</p>
+    <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
+    <h3 class="font-weight-bold bb-gray">Contact Us</h3>
+    <p>If you have any questions about this Privacy Policy, please contact us:</p>
+    <ul class="bulletless">
+        <li><i class="fas fa-check-circle"></i> By email: connect@bluebronna.org</li>
+    </ul>
+
+</div>
+<div id="footer" class="container-fluid">
+    <div class="row col-md-12">
+        <div class="col-md-4 mb-2">
+            <h3 class="font-weight-bold">About Us</h3>
+            <p>At Blue Bronna Wilderness Camp, we are passionate about providing campers the opportunity to get to know God by experiencing nature through wilderness adventures in the Alberta Rockies.&nbsp;<a class="anchor-darkblue-white" href="../about/history.html" target="_blank">Learn more...</a></p>
+            <p><a class="font-weight-bold anchor-darkblue-white" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate Today <i class="fas fa-arrow-right"></i></a></p>
+            <p><img src="../static/img/member_logo.png"/></p>
+        </div>
+        <div class="col-md-4 mx-auto mb-3">
+            <h3 class="font-weight-bold">Other Links</h3>
+            <ul>
+                <li><a class="contact-text" href="../index.html" target="_self"><i class="fas fa-caret-right"></i> Home</a></li>
+                <li><a class="contact-text" href="../volunteer/needs.html" target="_self"><i class="fas fa-caret-right"></i> Needs</a></li>
+                <li><a class="contact-text" href="../volunteer/index.html" target="_self"><i class="fas fa-caret-right"></i> Volunteer</a></li>
+                <li><a class="contact-text" href="../about/contact-us.html" target="_self"><i class="fas fa-caret-right"></i> Contact Us</a></li>
+                <li><a class="contact-text" href="../privacy-policy/index.html" target="_self"><i class="fas fa-caret-right"></i> Privacy Policy</a></li>
+                <li><a class="contact-text" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/" target="_self"><i class="fas fa-caret-right"></i> Register</a></li>
+
+
+            </ul>
+        </div>
+        <div class="col-md-4 mb-2">
+            <h5 class="font-weight-bold">Contact Us</h5>
+            <div>
+                <p>
+                    <i class="fas fa-phone bb-darkblue"></i><a class="contact-text" href="tel:403-803-4776"> (403)803-4776</a>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <i class="fas fa-envelope bb-darkblue"></i><a class="contact-text" href="mailto:Office@BlueBronna.org" target="_blank"> office@bluebronna.org</a>
+                </p>
+            </div>
+            <div class="mb-2">
+                <p><i class="fas fa-home bb-darkblue"></i> Box 65, Longview, AB T0L 1H0</p>
+            </div>
+            <div>
+                <a class="bb-darkblue media-icon" href="https://www.facebook.com/bluebronna" target="_blank">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                </a>
+                <a class="bb-darkblue media-icon" href="https://www.instagram.com/bluebronnawildernesscamp/" target="_blank">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+                <a class="bb-darkblue media-icon" href="https://twitter.com/BlueBronna" target="_blank">
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                </a>
+                <a class="bb-darkblue media-icon" href="https://www.linkedin.com/company/blue-bronna-wilderness-camp" target="_blank">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright text-center py-3 small">
+        Copyright 2019 Created by <a target="_blank" href="http://www.czmoody.com">Curtis Zim Moody</a>.
+    </div>
 </div>
 <script src="../static/js/base.js"></script>
 </body>
